--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             "assets/cover.png",
                         cover:
                             "assets/cover.png",
-                        api: "get_stream_title.php?url=https://sv2.globalhostlive.com/proxy/bendistereo/stream2",
+                        api: "",
                         stream_url: "https://sv2.globalhostlive.com/proxy/bendistereo/stream2",
                         tv_url: "https://eu1.servers10.com:2020/VideoPlayer/8106?autoplay=1",
                         server: "",
