--- a/index.html
+++ b/index.html
@@ -50,35 +50,7 @@
                             android: "#",
                             ios: "#",
                         },
-                    },
-                    {
-                        name: "BENDICIÓN STEREO",
-                        hash: "bendicion",
-                        description: "Bendecidos para bendecir!",
-                        logo: "assets/default_logo.png",
-                        album:
-                            "assets/cover.png",
-                        cover:
-                            "assets/cover.png",
-                        api: "",
-                        stream_url: "https://sv2.globalhostlive.com/proxy/bendistereo/stream2",
-                        tv_url: "https://eu1.servers10.com:2020/VideoPlayer/8106?autoplay=1",
-                        server: "",
-                        program: {
-                            time: "11:00",
-                            name: "Bendición Stereo",
-                            description: "EN VIVO // ON AIR",
-                        },
-                        social: {
-                            facebook: "https://facebook.com/BendicionStereo",
-                            twitter: "https://twitter.com/BendiStereo",
-                            instagram: "https://www.instagram.com/BendiStereo/",
-                        },
-                        apps: {
-                            android: "#",
-                            ios: "#",
-                        },
-                    },                    
+                    },    
                 ],
             };
         </script>
@@ -231,7 +203,7 @@
                         <div class="footer-tv"></div>
                         <div class="footer-app flex wrap g-0.75"></div>
                         <div class="footer-copyright">
-                            <small><strong>© RadioPlayer Demo code</strong> — contato@jailcon.es</small>
+                            <small><strong>© Jailson Webradio</strong> — contato@jailcon.es</small>
                         </div>
                     </div>
                 </footer>
