--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover" />
-        <title>Radio Player</title>
+        <title>Jailson Webradio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com/" />
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <meta name="theme-color" content="dark light" />
@@ -37,18 +37,18 @@
                         tv_url: "https://eu1.servers10.com:2020/VideoPlayer/8106?autoplay=1",
                         server: "",
                         program: {
-                            time: "00:00",
+                            time: "24/7",
                             name: "Jailson Web Radio",
                             description: "AO VIVO // ON AIR",
                         },
                         social: {
-                            facebook: "https://facebook.com/",
+                            whatsapp: "",
                             twitter: "https://twitter.com/",
                             instagram: "https://www.instagram.com//",
                         },
                         apps: {
-                            android: "#",
-                            ios: "#",
+                            android: "https://play.google.com/store/apps/details?id=com.jbcast.jwradio",
+                            ios: "",
                         },
                     },    
                 ],
