--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 timeRefresh: 10000,
                 stations: [
                     {
-                        name: "Jailson Web Rádio",
+                        name: "Jailson Webradio",
                         hash: "jailson",
                         description: "Música sem parar",
                         logo: "assets/jailson_logo.png",
