--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                             </svg>
                             Historico
                         </button>
-                        <button class="btn" data-outside="offcanvas-stations">
+                        <!--button class="btn" data-outside="offcanvas-stations">
                             <svg class="i i-list" viewBox="0 0 24 24">
                                 <circle cx="12" cy="12" r="2"></circle>
                                 <path d="M5 4.9a10 10 0 0 0 0 14.2M7.8 7.7a6 6 0 0 0 0 8.6m8.4 0a6 6 0 0 0 0-8.6M19 19.1a10 10 0 0 0 0-14.2"></path>
                             </svg>
                             Multiradio
-                        </button>
+                        </button-->
                         <button class="btn l:none" data-outside="mobile-menu">
                             <svg class="i i-bars" viewBox="0 0 24 24">
                                 <path d="M3 6h18M3 12h18M3 18h18"></path>
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
 
-                            <button class="player-button player-button-backward-step">
+                            <button class="player-button player-button-backward-step" hidden>
                                 <svg class="i i-backward-step" viewBox="0 0 24 24">
                                     <path d="M6 5v14M18 4v16L8 12Z"></path>
                                 </svg>
@@ -132,7 +132,7 @@
                                 </svg>
                             </button>
 
-                            <button class="player-button player-button-forward-step">
+                            <button class="player-button player-button-forward-step" hidden>
                                 <svg class="i i-forward-step" viewBox="0 0 24 24">
                                     <path d="M18 5v14M6 4v16l10-8Z"></path>
                                 </svg>
