--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             "assets/jailson_cover.png",
                         api: "",
                         stream_url: "https://stream.zeno.fm/yn65fsaurfhvv",
-                        tv_url: "https://eu1.servers10.com:2020/VideoPlayer/8106?autoplay=1",
+                        //tv_url: "https://eu1.servers10.com:2020/VideoPlayer/8106?autoplay=1",
                         server: "",
                         program: {
                             time: "24/7",
@@ -48,7 +48,7 @@
                         },
                         apps: {
                             android: "https://play.google.com/store/apps/details?id=com.jbcast.jwradio",
-                            ios: "",
+                            //ios: "",
                         },
                     },    
                 ],
