--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
                 </button>
                 <div class="modal-body-video"></div>
             </div>
+            <div class="modal-overlay" id="audio-popup"> 
+                <div class="modal-content" style="background-color: #38B6FA; padding: 20px; border-radius: 5px; text-align: center;">
+                    <p>Clique para iniciar o áudio</p>
+                    <button id="start-audio">Fechar</button>
+                </div>
+            </div>
             <div class="modal-overlay"></div>
             <div class="mobile-menu" id="mobile-menu">
                 <footer class="footer">
