--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                 <div class="modal-body-video"></div>
             </div>
             <div class="modal-overlay" id="audio-popup"> 
-                <div class="modal-content" style="background-color: #38B6FA; padding: 20px; border-radius: 5px; text-align: center;">
-                    <p>Clique para iniciar o áudio</p>
+                <div class="modal-content" style="background-color: #cccccc60; padding: 5px; border-radius: 5px; text-align: center;">
+                    <p>Seja Bem vindo! Exemplo de banner de propaganda.</p>
                     <button id="start-audio">Fechar</button>
                 </div>
             </div>
